# Meyaya

./: .env.example  .gitignore  README.md  alembic.ini  init_db.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_marriages.py  0003_add_bot_memories.py
bot/: __init__.py  app.py  main.py
bot/cache/: __init__.py  redis.py
bot/cogs/: __init__.py  chat.py  daily.py  interactions.py  marriage.py  profile.py  ship.py
bot/config/: __init__.py  settings.py
bot/data/: __init__.py  gemini_persona.py  interactions.py
bot/database/: __init__.py  base.py  session.py
bot/logging/: __init__.py  setup.py
bot/models/: __init__.py  daily.py  marriage.py  memory.py  relationship.py  user.py
bot/repositories/: __init__.py  base.py  daily.py  marriages.py  memories.py  relationships.py  users.py
bot/services/: __init__.py  chat_memory.py  daily.py  gemini.py  giphy.py  interactions.py  marriage.py  profiles.py  ship.py
bot/utils/: __init__.py  embeds.py
bot/views/: __init__.py  interactions.py  marriage.py
tests/: test_relationship_pair.py
