[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meyaya"
version = "0.1.0"
description = "A polished Discord social interaction bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10",
    "alembic>=1.13",
    "black>=24.4",
    "discord.py>=2.4",
    "pillow>=10.4",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.1",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.setuptools]
packages = ["bot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
